k8s/probe-demo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: probe-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: probe-demo
  template:
    metadata:
      labels:
        app: probe-demo
    spec:
      containers:
      - name: app
        image: nginx
        livenessProbe:
          httpGet:
            path: /notfound
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
