k8s/config-demo-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: config-nodeport
spec:
  type: NodePort
  selector:
    app: config-demo
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
