k8s/config-demo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  selector:
    app: config-demo
  ports:
  - port: 80
    targetPort: 80
